# k-aiti

./: Cargo.toml  LICENSE  README.md  chat_history.txt  helloworld.cpp
.github/workflows/: build-and-release.yml  release-linux.yml
src/: lib.rs  main.rs
src/ai/: chat.rs  chat_client.rs  chat_model.rs  chat_types.rs  mod.rs  stream.rs
src/ai/open_ai_gpt/: gpt_client.rs  mod.rs  stream.rs
src/config/: config.rs  config_manager.rs  io.rs  mod.rs  model_selectors.rs
src/config/user/: mod.rs  profile.rs  settings.rs
src/execution/: input_provider.rs  mod.rs
src/execution/chat_mode/: chat_client.rs  mod.rs  terminal_renderer.rs
src/execution/config_menu/: config.rs  config_menu.rs  io.rs  mod.rs  stateful_list.rs  view_model.rs  view_models.rs
src/execution/debug_mode/: mod.rs
src/execution/error_detection/: error_parser.rs  mod.rs
src/execution/profile_menu/: mod.rs
src/execution/ui/: mod.rs
src/execution/user_profile/: api_account.rs  config.rs  environment_variables.rs  mod.rs  profile.rs  profile_setup.rs  profile_setup_menu.rs  stateful_list.rs
src/models/: mod.rs  model_registry.rs
src/open_ai_gpt/: gpt_client.rs  mod.rs
src/render/: mod.rs  terminal_renderer.rs
src/render/chat_mode/: mod.rs
src/terminal_capture/: mod.rs  traits.rs
src/terminal_capture/unix/: mod.rs  terminal_capture.rs
src/terminal_capture/windows/: mod.rs  terminal_capture.rs
src/user_profile/: config.rs  environment_variables.rs  io.rs  mod.rs
src/user_profile/setup/: api_account.rs  mod.rs  profile.rs  stateful_list.rs
wix/: License.rtf  main.wxs
