[package]
name = "aita"
version = "0.1.0"
authors = ["Tyler Townsend"]
license = "MIT"
description = "Experimental CLI for working with an intelligent terminal assitant"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
anyhow = "1.0"
regex = "1.5.4"
hyper = "0.14"
bytes = "1.1"
async-openai = "0.10.3"
futures = "0.3.26"
ansi_term = "0.12.1"
crossterm = "0.26.1"
termimad = "0.12.0" 
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
dirs = "3.0"
webbrowser = "0.5"
tempfile = "3.2.0"
chrono = "0.4"
async-trait = "0.1"

[package.metadata.deb]
# Package metadata for the Debian package
maintainer = "Tyler Townsend"
section = "utils"
priority = "optional"
depends = "libc6 (>= 2.27), libssl1.1 (>= 1.1.1)"
